<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_rock"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="#673AB7"
        android:text="@string/rock"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <Button
        android:id="@+id/button_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F44336"
        android:text="@string/paper"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="@+id/button_rock"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <Button
        android:id="@+id/button_scissors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:text="@string/scissors"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <LinearLayout
        android:id="@+id/linearGroup"
        android:layout_width="137dp"
        android:layout_height="272dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageComp"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/you"
            android:src="@drawable/ic_rpsrock" />

        <ImageView
            android:id="@+id/imageYou"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_rpsrock" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ImageResult"
        android:layout_width="56dp"
        android:layout_height="133dp"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002">

        <ImageView
            android:id="@+id/imageViewResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO" />


    </LinearLayout>


    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#4FFFFFFF"
        android:text="RESET"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button_scissors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageResult"
        app:layout_constraintVertical_bias="0.65999997" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="Scores: You: 0  Computer: 0 Ties: 0 #Games: 0"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toTopOf="@+id/button_paper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReset"
        app:layout_constraintVertical_bias="0.68" />

    <View
        android:id="@+id/divider"
        android:layout_width="460dp"
        android:layout_height="110dp"
        android:layout_marginBottom="100dp"
        android:background="#009688"
        app:layout_constraintBottom_toTopOf="@+id/linearGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ROCK, PAPER, SCISSORS"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toTopOf="@+id/linearGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ellipsize="none"
        android:text="Races To 9"
        android:textAllCaps="true"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        android:textStyle="normal"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toTopOf="@+id/linearGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.51" />

    <LinearLayout
        android:id="@+id/testGuide"
        android:layout_width="65dp"
        android:layout_height="259dp"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:gravity="center|left"
            android:text="You"
            android:textAllCaps="false"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            app:fontFamily="sans-serif-condensed-medium" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|left"
            android:text="Rival"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            app:fontFamily="sans-serif-condensed-medium" />
    </LinearLayout>

    <TextView
        android:id="@+id/winStatement"
        android:layout_width="93dp"
        android:layout_height="77dp"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textColor="#673AB7"
        android:textSize="36sp"
        android:visibility="visible"
        app:fontFamily="@font/luckiest_guy"
        app:layout_constraintBottom_toTopOf="@+id/buttonReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageResult"
        app:layout_constraintVertical_bias="0.24000001" />


</androidx.constraintlayout.widget.ConstraintLayout>